# yayterm

./: meson.build
src/: key_handler.c  main.c  yayterm.h
